--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   sqflite: ^2.3.0
   provider: ^6.0.5
   date_picker_timeline: ^1.2.5
+  intl: ^0.18.1
+  fluttertoast: ^8.2.2
+  percent_indicator: ^4.2.3
+  flutter_slidable: ^3.0.1
 
 dev_dependencies:
   flutter_test:
